welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: ')' expected but 'return' found.
    		return true
                ^SlugTracking:9: error: ';' expected but 'else' found.
    } else { return false
      ^SlugTracking:20: error: Unmatched closing brace '}' ignored here
}
^