welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    avance()
    getCouleurSol()
   var x = getCouleurSol();
    recule()
    if(x == Color.green//!estFaceMur){
    		return true
    } else { return false
    }
    if(estFaceMur){
    	return false
    } else {
    	return true
    }
}        
